src/index.css
@import "tailwindcss";

@tailwind base;
@tailwind components;
@tailwind utilities;


@font-face {
  font-family: "Long";
  src: url("/fonts/long.woff");
}

@font-face {
  font-family: "Round";
  src: url("/fonts/round.woff");
}

@font-face {
  font-family: "Round Bold";
  font-weight: bold;
  src: url("/fonts/round-bold.woff");
}


body {
  background-color: #131317;
  overflow-x: hidden;
}

.masking-image {
  -webkit-mask-image: url("/images/hero-bg.webp");
  mask-image: url("/images/hero-bg.webp"); 
  
  -webkit-mask-repeat: no-repeat;
  mask-repeat: no-repeat;

  -webkit-mask-position: center;
  mask-position: center;

  -webkit-mask-size: cover;
  mask-size: cover;

}

.ComingSoon{
	background: linear-gradient(#a507b0, #fc0cdc, #ff8c00);
  	-webkit-background-clip: text;
  	-webkit-text-fill-color: transparent;
  	background-clip: text;
  	color: transparent;
	font-family: 'Round Bold';
	
}

.circle {
  mask-image: radial-gradient(circle at 50% 100%, black 20%, transparent 20%);
  mask-size: 100% 100%;
  mask-position: center bottom;
  mask-repeat: no-repeat;
}

.carachterName{

  font-size: 4.5rem;
  color: #ebc187;
  font-family: Round;
  font-weight: bolder;

}

.carachterSlogan{

  font-size: 2.5rem;
  color: #ffade5;
  font-family: Round;
  font-weight: bold;
  line-height: 2.8rem;

}

.carachterP{
  font-size: 1.5rem;
  color: #ffffff;
  font-family: Round;
  
}

